# APP

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/commands/: commit-push-pr.md
alembic/: env.py
alembic/versions/: 0efe6446fab4_add_matching_tables.py  123488eefd6c_add_is_ideal_player_and_notification_.py  1aaa35402c10_add_event_system_tables.py  1d100ee70732_add_blocks_reports_tables_and_is_.py  2e0428fb85f9_add_booking_invites_table_and_invite_.py  42116a730bd3_add_courts_bookings_booking_.py  558ad568695e_use_clock_timestamp_for_message_created_.py  66cb2e43272b_add_follow_model.py  80be72b14f0e_add_role_column_to_users.py  84f2939410f0_add_notifications_table.py  90f4ed05c37f_add_device_tokens_table.py  99be5f6f8210_add_chat_tables_and_new_chat_message_.py  ad9eb4a45eaa_add_admin_audit_log_table.py  b1a8e8d1881b_add_reviews_table.py  b249196993f8_initial_tables_users_user_auths_credit_.py
app/: __init__.py  config.py  dependencies.py  i18n.py  main.py
app/data/: blocked_words.txt
tests/: conftest.py  test_admin.py  test_assistant.py  test_auth.py  test_auth_service.py  test_blocks.py  test_booking_invite.py  test_bookings.py  test_boundaries.py  test_chat.py  test_courts.py  test_credit.py  test_cross_module.py  test_devices.py  test_events.py  test_follows.py  test_i18n.py  test_ideal_player.py  test_matching.py  test_notifications.py  test_ntrp_guide.py  test_push.py  test_reports.py  test_reviews.py  test_stats.py  test_user_search.py  test_users.py  test_weather.py  test_word_filter.py
(+127 files in other folders)
